--- a/roles/php/tasks/main.yml
+++ b/roles/php/tasks/main.yml
@@ -61,9 +61,16 @@
     dest: /etc/logrotate.d/php 
     src: templates/php.logrotate.j2
 
-- name: enable php7
+- name: enable php
   apache2_module:
     state: present
     name: "php{{ php_version }}"
+  notify:
+   - restart apache
+
+- name: deploy harden-php vhost conf
+  template: 
+    dest: /etc/apache2/vhosts-include/harden-php.conf 
+    src: templates/harden-php.conf.j2
   notify:
    - restart apache
