--- a/roles/webserver/tasks/packages.yml
+++ b/roles/webserver/tasks/packages.yml
@@ -38,6 +38,35 @@
   notify:
     - restart apache
 
+- name: install precompiled mod_rpaf 0.8.4 from https://github.com/gnif/mod_rpaf
+  copy:
+    src: files/mod_rpaf.so
+    dest: /usr/lib/apache2/modules/mod_rpaf.so
+    owner: root
+    group: root
+    mode: 0644
+
+- name: rpaf configs
+  template: 
+    src: "templates/rpaf.{{ item }}.j2" 
+    dest: "/etc/apache2/mods-available/mod_rpaf.{{ item }}"
+  with_items:
+    - "load"
+    - "conf"
+  notify:
+    - restart apache
+
+- name: enable module rpaf
+  file: 
+    src: "/etc/apache2/mods-available/mod_rpaf.{{ item }}" 
+    dest: "/etc/apache2/mods-enabled/mod_rpaf.{{ item }}" 
+    state: "link"
+  with_items:
+    - "load"
+    - "conf"
+  notify:
+    - restart apache
+
 - name: apache modules
   apache2_module: 
     state: present
