--- a/roles/deploy-init/tasks/deploy-end.yml
+++ b/roles/deploy-init/tasks/deploy-end.yml
@@ -4,7 +4,7 @@
   file:
     state: link
     dest: "{{ deploy.dir }}/current"
-    src: "{{ revision_folder }}"
+    src: "{{ deployed_path }}"
   notify:
     - reload apache
 
