--- a/roles/webserver/tasks/packages.yml
+++ b/roles/webserver/tasks/packages.yml
@@ -45,7 +45,7 @@
     owner: root
     group: root
     mode: 0644
-  when: "'container' in role_names"
+  when: reverse_proxied is defined and reverse_proxied==True
 
 - name: rpaf configs
   template: 
@@ -54,7 +54,7 @@
   with_items:
     - "load"
     - "conf"
-  when: "'container' in role_names"
+  when: reverse_proxied is defined and reverse_proxied==True
   notify:
     - restart apache
 
@@ -66,7 +66,7 @@
   with_items:
     - "load"
     - "conf"
-  when: "'container' in role_names"
+  when: reverse_proxied is defined and reverse_proxied==True
   notify:
     - restart apache
 
