--- a/roles/redis/tasks/server.yml
+++ b/roles/redis/tasks/server.yml
@@ -1,10 +1,5 @@
 ---
 
-- name: check if munin is installed
-  stat:
-    path: /usr/share/munin/plugins
-  register: munin_installed
-
 - name: prepare variable
   set_fact:
     redis_suffix: "{{ ['-', redis.port ]|join('') if redis.port != 6379 else '' }}"
@@ -32,16 +27,4 @@
   service:
     name: "redis-server{{ redis_suffix }}"
     enabled: yes
-    state: started
-
-- name: activate plugin
-  file:
-    src: "/usr/share/munin/plugins/redis_"
-    dest: "/etc/munin/plugins/redis_127.0.0.1_{{ redis.port }}"
-    state: link
-    owner: root
-    group: root
-  notify:
-    - restart munin
-  tags: munin
-  when: munin_installed.stat.exists
+    state: restarted
