missing packages for backup role

--- a/roles/remote-backup/tasks/main.yml
+++ b/roles/remote-backup/tasks/main.yml
@@ -1,5 +1,12 @@
 ---
 
+- name: install packages
+  apt:
+    state: present
+    name:
+      - "restic"
+      - "rsync"
+
 - name: directories
   file:
     state: directory
